add device checks table

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -113,7 +113,7 @@
     "Departments": "Departamentos",
     "Municipalities": "Municipios",
     "Corporations": "Corporaciones",
-    "Divipoles": "Divipola",
+    "Divipoles": "Divipol",
     "Created": "Creado",
     "Code": "Código",
     "Device Management": "Gestión de Empaque",
