--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -254,8 +254,8 @@
     "Check-out": "Salida",
     "Type": "Tipo",
     "Date": "Fecha",
-    "Total Reportados (entrada)": "Total Reportados (entrada)",
-    "Total Reportados (salida)": "Total Reportados (salida)",
+    "Total Reported (Check-in)": "Total Reportados (Entrada)",
+    "Total Reported (Check-out)": "Total Reportados (Salida)",
     "Total devices vs reported (check-in)": "Total dispositivos vs reportados (Entrada)",
     "Total devices vs reported (check-out)": "Total dispositivos vs reportados (Salida)",
     "Meta": "Meta",
