--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -266,5 +266,6 @@
     "Create": "Crear",
     "Users": "Usuarios",
     "Roles": "Roles",
-    "Total": "Total"
+    "Total": "Total",
+    "Phone": "Teléfono"
 }
