add filters dashboard

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -267,5 +267,8 @@
     "Users": "Usuarios",
     "Roles": "Roles",
     "Total": "Total",
-    "Phone": "Teléfono"
+    "Phone": "Teléfono",
+    "All Positions": "Todos los Puestos",
+    "Positions": "Puestos",
+    "Reset": "Restablecer"
 }
