--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -250,14 +250,14 @@
     "Report time": "Hora de reporte",
     "Time difference (minutes)": "Minutos de diferencia",
     "Position code": "Código de puesto",
-    "Check-in": "Entrada",
+    "Check-in": "Llegada",
     "Check-out": "Salida",
     "Type": "Tipo",
     "Date": "Fecha",
-    "Total Reported (Check-in)": "Total Reportados (Entrada)",
-    "Total Reported (Check-out)": "Total Reportados (Salida)",
-    "Total devices vs reported (check-in)": "Total dispositivos vs reportados (Entrada)",
-    "Total devices vs reported (check-out)": "Total dispositivos vs reportados (Salida)",
+    "Total Reported (Arrival)": "Total Reportados (Llegada)",
+    "Total Reported (Departure)": "Total Reportados (Salida)",
+    "Total devices vs reported (Arrival)": "Total dispositivos vs reportados (Llegada)",
+    "Total devices vs reported (Departure)": "Total dispositivos vs reportados (Salida)",
     "Meta": "Meta",
     "Write": "Abrir",
     "Export": "Exportar",
@@ -275,5 +275,11 @@
     "We are generating your Excel file. You will be notified when it is ready.": "Estamos generando tu archivo de Excel. Serás notificado cuando esté listo.",
     "Your export is ready": "Tu exportación está lista",
     "Download report: :url": "Descargar informe: :url",
-    "Your export has started. We will notify you when it finishes.": " Tu exportación ha comenzado. Te notificaremos cuando termine."
+    "Your export has started. We will notify you when it finishes.": " Tu exportación ha comenzado. Te notificaremos cuando termine.",
+    "Devices Reported (Arrival)": "Dispositivos Reportados (Llegada)",
+    "Devices Reported (Departure)": "Dispositivos Reportados (Salida)",
+    "Arrival": "Llegada",
+    "Departure": "Salida",
+    "Total Devices": "Total Dispositivos",
+    "Report type": "Tipo de reporte"
 }
