add config incidents

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -113,7 +113,7 @@
     "Departments": "Departamentos",
     "Municipalities": "Municipios",
     "Corporations": "Corporaciones",
-    "Divipoles": "Divipol",
+    "Divipoles": "Divipole",
     "Created": "Creado",
     "Code": "Código",
     "Device Management": "Gestión de Empaque",
@@ -127,7 +127,7 @@
     "Corporation Code": "Código de la corporación",
     "Corporation Name": "Nombre de la corporación",
     "Zone Code": "Código de la zona",
-    "Position Code": "Código de posición",
+    "Position Code": "Código de puesto",
     "Polling Station": "Mesa de votación",
     "Kit Number": "Número de kit",
     "Pakings": "Empaques",
@@ -208,7 +208,7 @@
     "Devices Reported": "Dispositivos Reportados",
     "Total devices": "Total Dispositivos",
     "Devices reported": "Dispositivos reportados",
-    "Position": "Posición",
+    "Position": "Puesto",
     "Address": "Dirección",
     "No devices reported yet.": "Aún no se han reportado dispositivos.", "Access Reports": "Acceder a Reportes",
     "Download Reports": "Descargar Reportes",
