--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -324,6 +324,7 @@
     "Some user IDs from usuario_asignado do not exist": "Algunos IDs de usuario de usuario_asignado no existen",
     "Is Backup": "Dispositivo Respaldo",
     "Yes": "Sí",
-    "No": "No"
+    "No": "No",
+    "This action will truncate incidents, Devices, divipoles, departments and municipalities tables. Do you want to proceed?": "Esta acción limpiará las tablas de dispositivos, divipoles, departamentos y municipios. ¿Desea continuar?"
 
 }
