add update device_key

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -330,14 +330,13 @@
     "Edit Divipoles": "Editar Divipoles",
     "Divipole updated": "Divipole actualizado",
     "Edit Divipole": "Editar Divipole",
-    "Select a divipole": "Seleccione un divipole"
-    ,
+    "Select a divipole": "Seleccione un divipole",
     "Bulk Update by Excel": "Actualizar por Excel",
     "Update tel/IMEI via Excel": "Actualizar tel/IMEI por Excel",
     "Update": "Actualizar",
     "Cancel": "Cancelar",
     "Excel File": "Archivo Excel",
-    "Required columns: id_dispositivo_cambio, telefono, imei": "Columnas requeridas: id_dispositivo_cambio, telefono, imei",
+    "Required columns: id_dispositivo_cambio, telefono, imei, llave": "Columnas requeridas: id_dispositivo_cambio, telefono, imei, llave",
     "You must attach a file.": "Debe adjuntar un archivo.",
     "Unsupported format. Use .xlsx, .xls or .csv": "Formato no soportado. Use .xlsx, .xls o .csv",
     "File enqueued for processing. You will be notified when it finishes.": "Archivo encolado para procesamiento. Recibirás una notificación al terminar.",
