add websockets server

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -346,5 +346,6 @@
     "Missing required column: :col": "Falta la columna requerida: :col",
     "Devices bulk update completed": "Actualización de dispositivos completada",
     "Updated: :u, Not found: :n, Skipped: :s": "Actualizados: :u, No encontrados: :n, Omitidos: :s",
-    "An error occurred while processing the file.": "Ocurrió un error procesando el archivo."
+    "An error occurred while processing the file.": "Ocurrió un error procesando el archivo.",
+    "Real-time Data": "Datos en tiempo real"
 }
