Fix min websockets server. https

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -347,5 +347,7 @@
     "Devices bulk update completed": "Actualización de dispositivos completada",
     "Updated: :u, Not found: :n, Skipped: :s": "Actualizados: :u, No encontrados: :n, Omitidos: :s",
     "An error occurred while processing the file.": "Ocurrió un error procesando el archivo.",
-    "Real-time Data": "Datos en tiempo real"
+    "Real-time Data": "Datos en tiempo real",
+    "Select Department and Municipality first": "Seleccione primero Departamento y Municipio",
+    "Report Type": "Tipo de reporte"
 }
